# ButterEngine-Rust

./: .gitignore  Cargo.toml  SPEC-SHEET.md  libglfw.so.3.4
lib/gl/: Cargo.toml  build.rs
resources/materials/: template.toml  wood.toml
resources/shaders/: default.fs  triangle.fs
src/: bufferobject.rs  components.rs  entities.rs  main.rs  material.rs  mesh.rs  renderer.rs  resources.rs  settings.rs  shader.rs  systems.rs  texture.rs  vertex.rs  window.rs
